Mobile horizontal scroll is fixed

--- a/index.css
+++ b/index.css
@@ -124,6 +124,9 @@ hr.main {
 
 /* Tablet Size---------------------------------------------------------------------------- */
 @media screen and (max-width: 768px) {
+	html {
+		overflow-x: hidden;
+	}
     ul.sidenav {
         width: 100%;
         height: auto;
@@ -145,7 +148,7 @@ hr.main {
 }
 
 /* Phone Size--------------------------------------------------------------------------------- */
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 414px) {
 	html {
 		overflow-x: hidden;
 	}
@@ -166,5 +169,9 @@ hr.main {
 	}
 	.topper {
     word-spacing: -14px;
+	}
+	div.content {
+		margin-left: 0;
+		width: 100%;
 	}
 }
